docs: update step by step guide with .png and openin 8000 port

--- a/1.PassoApasso.md
+++ b/1.PassoApasso.md
@@ -21,6 +21,7 @@ Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuita
 - Acesse: https://azure.microsoft.com/free
 - Crie uma conta com e-mail educacional
 - Ganhe **100 USD** em créditos + acesso a serviços gratuitos por 12 meses
+[Veja aqui os créditos gratuitos do Azure](assets/azure-credits)
 
 ---
 
@@ -91,7 +92,10 @@ Copie o conteúdo que começa com `ssh-ed25519`...
 ssh -T git@github.com
 ```
 
-Talvez você seja notificado com uma mensagem 'The authenticity of host 'github.com (XX.201.28.YYY)' can't be established.'. Digite yes 
+Talvez você seja notificado com uma mensagem 'The authenticity of host 'github.com (XX.201.28.YYY)' can't be established.'.
+
+Digite yes 
+
 Você verá:
 ```
 Hi 92username! You've successfully authenticated...
@@ -107,23 +111,54 @@ cd CI-CD-tutorial-completo
 docker compose up -d
 ```
 
-Sua API agora roda no container e estará acessível pela porta `8000`.
+
 
 ---
 
 ### 7. Liberar a Porta 8000 na Azure (Acesso HTTP)
 
-#### Opção A – Manual:
+
+
+#### Opção A – Manual (GUI via portal):
 - Vá até **Networking** da VM no portal Azure
 - Clique em **Add Inbound Port Rule**
-- Porta: `8000`, Protocolo: `TCP`, Action: Allow
+- **Source:** Any
+- **Source port ranges:** `*`
+- **Destination:** Any
+- **Service:** `Custom`
+- **Destination port ranges:** `8000`
+- **Protocol:** TCP
+- **Action:** Allow
+- **Priority:** 310 
+- **Name:** `AllowAnyCustom8000Inbound`
+- Clique em **Add**
 
-#### Opção B – Azure CLI:
+Sua API agora roda no container e estará acessível pela porta `8000`.
+
+---
+
+### 8. Testar se a API está online
+
+Abra o navegador e acesse:
+
+```
+http://<SEU_ENDERECO_PUBLICO>:8000/
+```
+
+Se tudo estiver funcionando corretamente, você verá:
+```json
+{
+  "status": "ok"
+}
+```
+
+ou
+
+![API Status OK](assets/api-status-ok.png)
+
+Você também pode usar `curl` no terminal:
 ```bash
-az vm open-port \
-  --port 8000 \
-  --resource-group cicd-rg \
-  --name ci-cd-tutorial
+curl http://<SEU_ENDERECO_PUBLICO>:8000/
 ```
 
 ---
@@ -134,4 +169,4 @@ Você agora tem:
 - Uma VM gratuita na Azure com sua API FastAPI rodando
 - Docker instalado e configurado
 - Projeto pronto para CI/CD com autenticação SSH no GitHub
-
+- Porta 8000 liberada para acesso externo
