docs: fix link to Azure credits image in tutorial

--- a/1.PassoApasso.md
+++ b/1.PassoApasso.md
@@ -21,7 +21,7 @@ Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuita
 - Acesse: https://azure.microsoft.com/free
 - Crie uma conta com e-mail educacional
 - Ganhe **100 USD** em créditos + acesso a serviços gratuitos por 12 meses
-[Veja aqui os créditos gratuitos do Azure](assets/azure-credits)
+[Veja aqui os créditos gratuitos do Azure](assets/azure-credits.png)
 
 ---
 
