docs: clarify SSH logout requirement for Docker group application

--- a/1.PassoApasso.md
+++ b/1.PassoApasso.md
@@ -63,7 +63,8 @@ curl -fsSL https://get.docker.com | sudo sh
 sudo apt install docker-compose -y
 sudo usermod -aG docker $USER
 ```
-> ⚠️ Deslogue e logue novamente no SSH para aplicar o grupo docker
+> ⚠️ Deslogue e logue novamente no SSH para aplicar o grupo docker e não precisar
+usar docker com sudo
 
 ---
 
