docs: restructure tutorial introduction and add continuation section for clarity

--- a/1.PassoApasso.md
+++ b/1.PassoApasso.md
@@ -1,6 +1,8 @@
 # 🧪 Tutorial CI/CD com Azure VM + FastAPI + Docker (para iniciantes)
 
-Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuitamente** em uma **máquina virtual (VM) da Azure** usando o Free Tier. Também configuramos o ambiente com Docker, CI/CD com GitHub Actions e monitoramento externo via uma VPS.
+## **Capítulo 1: Deploy manual de API FastAPI com Docker em VM da Azure**
+
+Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuitamente** em uma **máquina virtual (VM) da Azure** usando o Free Tier.
 
 ---
 
@@ -171,3 +173,9 @@ Você agora tem:
 - Docker instalado e configurado
 - Projeto pronto para CI/CD com autenticação SSH no GitHub
 - Porta 8000 liberada para acesso externo
+
+## ▶️ Continuação
+
+Você concluiu o **Capítulo 1: Deploy manual de API FastAPI com Docker em VM da Azure**.
+
+➡️ No **Capítulo 2**, vamos configurar o **deploy automático com GitHub Actions**, conectando seu repositório à infraestrutura da Azure.
