docs: update Chapter 2 with infrastructure summary and configuration status

--- a/2.Capitulo_2.md
+++ b/2.Capitulo_2.md
@@ -1,3 +1,10 @@
+# Capítulo 2: Estrutura Base do Projeto
+
+Se você concluiu o Capítulo 1 corretamente, agora você dispõe de uma infraestrutura básica necessária para prosseguirmos com a implementação do pipeline CI/CD.
+
+A tabela abaixo resume os componentes e configurações que devem estar funcionando
+em seu ambiente neste momento:
+
 | Item | Status | Comentário |
 |:-----|:-------|:-----------|
 | Conta Azure criada | Pronto | Free Tier ativado com 100 USD |
@@ -8,4 +15,15 @@
 | Projeto FastAPI clonado e rodando | Pronto | Docker Compose up funcionando |
 | Porta 8000 liberada na Azure | Pronto | Acesso externo validado |
 | Teste de API no navegador | Pronto | Resposta JSON `{ "status": "ok" }` recebida |
-| Tutorial documentado em Markdown | Pronto | Atualizado e seguindo passo a passo |
+
+## Objetivo do Capítulo 2
+
+- Automatizar o processo de build e deploy
+- Rodar pipelines de CI/CD usando GitHub Actions
+- Fazer atualizações da API sem necessidade de acesso manual à VM
+
+---
+
+## Início do Capítulo 2
+
+Vamos começar configurando os `secrets` necessários no GitHub!
