docs: update CI/CD workflow and restructure tutorial chapters for clarity

--- a/2. Capitulo 2.md
+++ b/2. Capitulo 2.md
@@ -26,4 +26,35 @@ em seu ambiente neste momento:
 
 ## Início do Capítulo 2
 
-Vamos começar configurando os `secrets` necessários no GitHub!
+Vamos começar configurando os `secrets` necessários no GitHub.
+
+## Configurando os `secrets` no GitHub
+
+### 1. Acesse seu repositório no GitHub
+
+- Vá em **Settings** > **Secrets and variables** > **Actions** > **New repository secret**
+
+### 2. Adicione os seguintes secrets
+
+| Nome do Secret | Valor | Observação |
+|:---------------|:------|:-----------|
+| `VM_IP` | IP público da sua VM | Ex: `123.456.789.00` |
+| `VM_USER` | Nome do usuário da VM | Ex: `azureuser` |
+| `VM_KEY` | Chave privada SSH | Conteúdo da `.pem` |
+
+*### 3. *Como preparar o valor do `VM_KEY` corretamente*
+
+- Abra a chave `.pem` com um editor de texto (ex: VSCode).
+- Copie todo o conteúdo, incluindo:
+  ```
+  -----BEGIN RSA PRIVATE KEY-----
+  (chave)
+  -----END RSA PRIVATE KEY-----
+  ```
+- Cole no campo de valor do secret `VM_KEY` no GitHub.
+
+**Observações importantes:**
+- Não adicionar espaços extras.
+- Não colocar aspas.
+- Manter exatamente todas as linhas da chave.
+
