docs: remove emojis from section headers for consistency

--- a/1. Capitulo 1.md
+++ b/1. Capitulo 1.md
@@ -1,4 +1,4 @@
-# 🧪 Tutorial CI/CD com Azure VM + FastAPI + Docker (para iniciantes)
+#  Tutorial CI/CD com Azure VM + FastAPI + Docker (para iniciantes)
 
 ## **Capítulo 1: Deploy manual de API FastAPI com Docker em VM da Azure**
 
@@ -6,7 +6,7 @@ Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuita
 
 ---
 
-## 📌 Visão Geral
+##  Visão Geral
 
 - **Backend:** FastAPI (Python)
 - **Deploy:** Azure VM (B1s, grátis)
@@ -16,7 +16,7 @@ Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuita
 
 ---
 
-## 🔧 Etapas
+##  Etapas
 
 ### 1. Criar Conta na Azure e Ativar o Free Tier
 
@@ -166,7 +166,7 @@ curl http://<SEU_ENDERECO_PUBLICO>:8000/
 
 ---
 
-### ✅ Pronto!
+###  Pronto!
 Você agora tem:
 
 - Uma VM gratuita na Azure com sua API FastAPI rodando
@@ -174,8 +174,8 @@ Você agora tem:
 - Projeto pronto para CI/CD com autenticação SSH no GitHub
 - Porta 8000 liberada para acesso externo
 
-## ▶️ Continuação
+##  Continuação
 
 Você concluiu o **Capítulo 1: Deploy manual de API FastAPI com Docker em VM da Azure**.
 
-➡️ No **Capítulo 2**, vamos configurar o **deploy automático com GitHub Actions**, conectando seu repositório à infraestrutura da Azure.
+ No **Capítulo 2**, vamos configurar o **deploy automático com GitHub Actions**, conectando seu repositório à infraestrutura da Azure.
