docs: update monitoring section to include Prometheus and Grafana

--- a/1. Capitulo 1.md
+++ b/1. Capitulo 1.md
@@ -12,7 +12,7 @@ Este tutorial ensina **como criar uma API com FastAPI** e **hospedá-la gratuita
 - **Deploy:** Azure VM (B1s, grátis)
 - **Containerização:** Docker + Docker Compose
 - **CI/CD:** GitHub Actions
-- **Monitoramento:** script externo (em uma VPS)
+- **Monitoramento:** script externo (em uma VPS) - Com Prometheus e Grafana
 
 ---
 
