docs: add explanation for build-test steps including Checkout and Setup Python actions

--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -161,3 +161,88 @@ jobs:
 | `runs-on: ubuntu-latest` | Define o sistema operacional da máquina virtual do GitHub Actions |
 
 ---
+
+Vamos seguir com a explicação do próximo bloco:
+
+---
+
+## Bloco 3: Primeiros steps do `build-test`
+
+```yaml
+steps:
+  - name: Checkout do código
+    uses: actions/checkout@v4
+
+  - name: Setup Python
+    uses: actions/setup-python@v5
+    with:
+      python-version: "3.12"
+```
+
+### Explicação
+
+- **steps:**  
+  Lista de **ações** que o job irá executar, na ordem definida.
+
+- **Checkout do código:**  
+  - Usa a ação `actions/checkout@v4`.
+  - **Objetivo:** Clona o código do repositório GitHub dentro da máquina virtual (runner) para que ele possa ser utilizado nas próximas etapas (build, lints, testes, etc).
+
+- **Setup Python:**  
+  - Usa a ação `actions/setup-python@v5`.
+  - **Objetivo:** Instala e configura a versão do Python necessária no ambiente do runner (no caso, Python `3.12`).
+
+---
+
+## Resumo técnico
+
+| Step | Função |
+|:-----|:-------|
+| Checkout do código | Clona o repositório para a máquina do GitHub Actions |
+| Setup Python | Instala a versão especificada do Python para execução do workflow |
+
+---
+
+Vamos continuar então a explicação, agora com o bloco de instalação das dependências:
+
+---
+
+## Bloco 4: Instalação das dependências
+
+```yaml
+- name: Instalar dependências
+  run: |
+    pip install -r requirements.txt \
+                ruff pylint mypy bandit pip-audit black pytest
+```
+
+### Explicação
+
+- **name: Instalar dependências:**  
+  Rótulo do passo, apenas para organização visual no GitHub Actions.
+
+- **run:**  
+  - Executa comandos dentro da máquina virtual do runner.
+  - Faz a instalação de todas as dependências necessárias para build, lint, análise e testes.
+
+- **pip install:**  
+  - Primeiro, instala todas as dependências do seu projeto definidas no `requirements.txt`.
+  - Depois, instala ferramentas adicionais para qualidade de código e segurança:
+    - `ruff` → Lint e formatação rápida
+    - `pylint` → Análise de qualidade do código
+    - `mypy` → Verificação de tipagem
+    - `bandit` → Análise de segurança no código Python
+    - `pip-audit` → Verificação de vulnerabilidades nas dependências
+    - `black` → Formatação automática de código
+    - `pytest` → Execução dos testes unitários
+
+---
+
+## Resumo técnico
+
+| Comando | Função |
+|:--------|:-------|
+| `pip install -r requirements.txt` | Instala dependências da aplicação |
+| `pip install ruff pylint mypy bandit pip-audit black pytest` | Instala ferramentas auxiliares para análise, segurança e testes |
+
+---
