docs: update CI/CD workflow to include formatting check with Black and other stuffs

--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -45,6 +45,9 @@ jobs:
           pip install -r requirements.txt \
                       ruff pylint mypy bandit pip-audit black pytest
 
+      - name: Verificação com Black
+        run: black --check app
+
       - name: Lint com Ruff
         run: ruff app
 
@@ -59,9 +62,6 @@ jobs:
 
       - name: Auditoria de dependências com pip-audit
         run: pip-audit
-
-      - name: Verificação de formatação com Black
-        run: black --check app
 
       - name: Executar testes unitários
         run: pytest -q
@@ -162,10 +162,6 @@ jobs:
 
 ---
 
-Vamos seguir com a explicação do próximo bloco:
-
----
-
 ## Bloco 3: Primeiros steps do `build-test`
 
 ```yaml
@@ -200,10 +196,6 @@ steps:
 |:-----|:-------|
 | Checkout do código | Clona o repositório para a máquina do GitHub Actions |
 | Setup Python | Instala a versão especificada do Python para execução do workflow |
-
----
-
-Vamos continuar então a explicação, agora com o bloco de instalação das dependências:
 
 ---
 
@@ -246,3 +238,265 @@ Vamos continuar então a explicação, agora com o bloco de instalação das dep
 | `pip install ruff pylint mypy bandit pip-audit black pytest` | Instala ferramentas auxiliares para análise, segurança e testes |
 
 ---
+
+## Bloco 5: Verificação de formatação com Black
+
+```yaml
+- name: Verificação de formatação com Black
+  run: black --check app
+```
+
+### Explicação
+
+- **name: Verificação de formatação com Black:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: black --check app:**
+  Executa o **Black** no modo de **verificação** (`--check`) no diretório `app`.
+
+O **Black** é um formatador automático de código Python.
+No modo `--check`, ele não altera nada — apenas verifica se o código segue o padrão de formatação que o Black exige.
+
+### Resultado esperado
+
+- Se o Black detectar arquivos que precisam ser reformatados, o workflow **falhará** nesta etapa.
+- Se o código já estiver devidamente formatado, o pipeline seguirá normalmente.
+
+### Observação
+
+- Usamos `--check` para garantir que o repositório mantenha um estilo consistente sem alterar arquivos automaticamente no pipeline de CI. A formatação deve ser feita localmente antes do commit.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: black --check app` | Verificar se o código segue o padrão de formatação definido pelo Black |
+
+---
+
+## Bloco 6: Lint com Ruff
+
+```yaml
+- name: Lint com Ruff
+  run: ruff app
+```
+
+### Explicação
+
+- **name: Lint com Ruff:**
+  Identificação deste passo no GitHub Actions. Serve apenas para organização visual.
+
+- **run: ruff app:**
+  Executa o **Ruff** sobre o diretório `app`, que é onde está o código fonte da aplicação.
+
+  O Ruff é uma ferramenta de **análise de estilo de código** (similar ao Flake8) muito rápida, baseada nas regras do PEP 8 e organização de imports.
+
+  Ele verifica coisas como:
+  - Nomeação de variáveis
+  - Organização de imports
+  - Padrões de codificação recomendados
+
+### Resultado esperado
+
+- Se o Ruff encontrar problemas no estilo do código, o workflow irá **falhar** neste ponto.
+- Se tudo estiver conforme o esperado, ele seguirá para a próxima etapa.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: ruff app` | Analisar o estilo do código no diretório `app` com base nas regras PEP8 |
+
+---
+
+## Bloco 7: Análise de código com Pylint
+
+```yaml
+- name: Análise de código com Pylint
+  run: pylint app
+```
+
+### Explicação
+
+- **name: Análise de código com Pylint:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: pylint app:**
+  Executa o **Pylint** no diretório `app`.
+
+O Pylint é uma ferramenta de **análise estática de código** que avalia:
+
+- Má prática de programação
+- Possíveis bugs
+- Violações de convenções de estilo
+- Qualidade geral do código
+
+Cada arquivo do diretório `app` será analisado, gerando uma pontuação baseada em regras e boas práticas Python.
+
+### Resultado esperado
+
+- Se o Pylint detectar erros críticos (como erros de sintaxe, variáveis não usadas, etc.), o workflow **falhará** nesta etapa.
+- Se apenas warnings ou sugestões aparecerem, o comportamento depende da configuração padrão do Pylint (que podemos customizar depois).
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: pylint app` | Avaliar a qualidade do código e detectar problemas antes do deploy |
+
+---
+
+## Bloco 8: Verificação de tipagem com mypy
+
+```yaml
+- name: Verificação de tipagem com mypy
+  run: mypy app
+```
+
+### Explicação
+
+- **name: Verificação de tipagem com mypy:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: mypy app:**
+  Executa o **mypy** no diretório `app`.
+
+O **mypy** é uma ferramenta de **verificação de tipos estáticos** para Python.
+Ele verifica se o código está respeitando as anotações de tipo (`type hints`) e detecta inconsistências de tipagem.
+
+Exemplos de problemas que o mypy detecta:
+- Retornos de funções diferentes do declarado
+- Atribuição de tipos incompatíveis (ex: passando `str` onde deveria ser `int`)
+- Falta de anotações obrigatórias em funções
+
+### Resultado esperado
+
+- Se o mypy encontrar erros de tipagem, o workflow **falha** nesta etapa.
+- Se o código estiver corretamente anotado, o pipeline prossegue para a próxima etapa.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: mypy app` | Verificar inconsistências de tipos nas funções, classes e variáveis do projeto |
+
+---
+
+## Bloco 9: Análise de segurança com Bandit
+
+```yaml
+- name: Análise de segurança com Bandit
+  run: bandit -r app
+```
+
+### Explicação
+
+- **name: Análise de segurança com Bandit:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: bandit -r app:**
+  Executa o **Bandit** recursivamente (`-r`) no diretório `app`.
+
+O **Bandit** é uma ferramenta de análise estática de segurança para projetos Python.
+Ele identifica **vulnerabilidades conhecidas** no código-fonte, como:
+
+- Uso inseguro de funções (`eval`, `exec`)
+- Problemas de criptografia fraca
+- Uso de comandos de sistema sem sanitização
+- Hardcoded passwords
+- Outras práticas inseguras
+
+### Resultado esperado
+
+- Se o Bandit encontrar vulnerabilidades consideradas graves, o workflow **falhará**.
+- Se não houver problemas críticos, o pipeline segue para a próxima etapa.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: bandit -r app` | Analisar vulnerabilidades conhecidas no código Python |
+
+---
+
+## Bloco 10: Auditoria de dependências com pip-audit
+
+```yaml
+- name: Auditoria de dependências com pip-audit
+  run: pip-audit
+```
+
+### Explicação
+
+- **name: Auditoria de dependências com pip-audit:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: pip-audit:**
+  Executa o **pip-audit** na máquina virtual de execução (runner).
+
+O **pip-audit** é uma ferramenta que faz auditoria de segurança nas dependências instaladas do projeto.
+Ele consulta bancos de dados públicos de vulnerabilidades (como a base de dados do PyPI Advisory Database) e detecta:
+
+- Bibliotecas conhecidas com falhas de segurança
+- Vulnerabilidades de alta, média ou baixa severidade
+- Sugestões de versões atualizadas corrigidas
+
+### Resultado esperado
+
+- Se encontrar pacotes vulneráveis, ele exibirá um relatório.
+- Dependendo da configuração (por padrão), o workflow **falha** se vulnerabilidades forem encontradas.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: pip-audit` | Auditar as bibliotecas Python instaladas contra vulnerabilidades conhecidas |
+
+---
+
+## Bloco 11: Executar testes unitários
+
+```yaml
+- name: Executar testes unitários
+  run: pytest -q
+```
+
+### Explicação
+
+- **name: Executar testes unitários:**
+  Identificação visual desta etapa no GitHub Actions.
+
+- **run: pytest -q:**
+  Executa o **Pytest** para rodar os testes unitários do projeto.
+  - A flag `-q` (quiet) reduz a verbosidade da saída, mostrando apenas informações essenciais e falhas.
+
+O Pytest descobre e executa automaticamente os testes definidos no projeto (geralmente em arquivos `test_*.py` ou `*_test.py`).
+
+### Resultado esperado
+
+- Se todos os testes passarem, o workflow continua para a próxima etapa (ou job).
+- Se algum teste falhar, o workflow **falhará** nesta etapa.
+
+---
+
+## Resumo técnico
+
+| Campo | Função |
+|:------|:-------|
+| `run: pytest -q` | Executar a suíte de testes unitários do projeto |
+
+---
+
+# ... (Restante do arquivo, incluindo o job 'deploy') ...
