docs: update Black formatting step to reformat code automatically instead of just checking

--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -45,8 +45,8 @@ jobs:
           pip install -r requirements.txt \
                       ruff pylint mypy bandit pip-audit black pytest
 
-      - name: Verificação com Black
-        run: black --check app
+      - name: Formatação com Black
+        run: black app
 
       - name: Lint com Ruff
         run: ruff app
@@ -239,32 +239,33 @@ steps:
 
 ---
 
-## Bloco 5: Verificação de formatação com Black
+## Bloco 5: Formatação com Black
 
 ```yaml
-- name: Verificação de formatação com Black
-  run: black --check app
+- name: Formatação com Black
+  run: black app
 ```
 
 ### Explicação
 
-- **name: Verificação de formatação com Black:**
+- **name: Formatação com Black:**
   Identificação visual desta etapa no GitHub Actions.
 
-- **run: black --check app:**
-  Executa o **Black** no modo de **verificação** (`--check`) no diretório `app`.
+- **run: black app:**
+  Executa o **Black** no diretório `app`.
 
-O **Black** é um formatador automático de código Python.
-No modo `--check`, ele não altera nada — apenas verifica se o código segue o padrão de formatação que o Black exige.
+O **Black** é um formatador automático de código Python. Ao rodar sem a flag `--check`, ele **reformatará automaticamente** os arquivos no diretório `app` para que sigam o padrão de estilo do Black.
+
+### Objetivo da mudança
+
+- Anteriormente, usávamos `black --check app` apenas para verificar a formatação.
+- Agora, permitimos que o Black **altere os arquivos** diretamente no ambiente do workflow.
+- **Motivo:** A formatação automática do Black pode corrigir alguns problemas de estilo que seriam apontados pelo Pylint na etapa seguinte, potencialmente aumentando a chance de aprovação do Pylint e mantendo a consistência do código.
 
 ### Resultado esperado
 
-- Se o Black detectar arquivos que precisam ser reformatados, o workflow **falhará** nesta etapa.
-- Se o código já estiver devidamente formatado, o pipeline seguirá normalmente.
-
-### Observação
-
-- Usamos `--check` para garantir que o repositório mantenha um estilo consistente sem alterar arquivos automaticamente no pipeline de CI. A formatação deve ser feita localmente antes do commit.
+- O Black irá reformatar os arquivos Python no diretório `app`.
+- Esta etapa **não falhará** por problemas de formatação, pois ela os corrige automaticamente. O workflow seguirá para a próxima etapa.
 
 ---
 
@@ -272,7 +273,7 @@ No modo `--check`, ele não altera nada — apenas verifica se o código segue o
 
 | Campo | Função |
 |:------|:-------|
-| `run: black --check app` | Verificar se o código segue o padrão de formatação definido pelo Black |
+| `run: black app` | Reformatar automaticamente o código Python no diretório `app` seguindo o padrão Black |
 
 ---
 
