docs: add chapter 4 detailing automatic deployment and security analysis with OWASP ZAP

--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -254,15 +254,7 @@ steps:
 - **run: black app:**
   Executa o **Black** no diretório `app`.
 
-O **Black** é um formatador automático de código Python. Ao rodar sem a flag `--check`, ele **reformatará automaticamente** os arquivos no diretório `app` para que sigam o padrão de estilo do Black.
-
-### Objetivo da mudança
-
-- Anteriormente, usávamos `black --check app` apenas para verificar a formatação.
-- Agora, permitimos que o Black **altere os arquivos** diretamente no ambiente do workflow.
-- **Motivo:** A formatação automática do Black pode corrigir alguns problemas de estilo que seriam apontados pelo Pylint na etapa seguinte, potencialmente aumentando a chance de aprovação do Pylint e mantendo a consistência do código.
-
-### Resultado esperado
+O **Black** é um formatador automático de código Python.
 
 - O Black irá reformatar os arquivos Python no diretório `app`.
 - Esta etapa **não falhará** por problemas de formatação, pois ela os corrige automaticamente. O workflow seguirá para a próxima etapa.
@@ -500,4 +492,3 @@ O Pytest descobre e executa automaticamente os testes definidos no projeto (gera
 
 ---
 
-# ... (Restante do arquivo, incluindo o job 'deploy') ...
