docs: update formatting checks and OWASP ZAP action  in cap1 and cap3

--- a/1. Capitulo 1.md
+++ b/1. Capitulo 1.md
@@ -122,7 +122,7 @@ docker compose up -d
 
 
 
-#### Opção A – Manual (GUI via portal):
+#### Manual (GUI via portal):
 - Vá até **Networking** da VM no portal Azure
 - Clique em **Add Inbound Port Rule**
 - **Source:** Any
