--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -45,26 +45,28 @@ jobs:
           pip install -r requirements.txt \
                       ruff pylint mypy bandit pip-audit black pytest
 
-      - name: Formatação com Black
-        run: black app
+      - name: Verificação de formatação com Black
+        run: black --color ./app
 
       - name: Lint com Ruff
-        run: ruff app
+        run: ruff check ./app
 
       - name: Análise de código com Pylint
         run: pylint app
 
       - name: Verificação de tipagem com mypy
-        run: mypy app
+        run: mypy ./app
 
       - name: Análise de segurança com Bandit
-        run: bandit -r app
+        run: bandit -r ./app
 
       - name: Auditoria de dependências com pip-audit
         run: pip-audit
 
       - name: Executar testes unitários
         run: pytest -q
+        env:
+          PYTHONPATH: ./
 
   deploy:
     needs: build-test
@@ -83,12 +85,14 @@ jobs:
             git pull origin main
             docker compose down
             docker compose up -d
-
+      
       - name: Security Scan com OWASP ZAP
-        uses: zaproxy/action-baseline@v0.10.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'http://${{ secrets.VM_IP }}:8000'
           fail_action: false
+          token: ${{ secrets.ZAP_TOKEN }}
+          artifact_name: zapscanreport
 ```
 
 ---
