docs: update commands in CI/CD workflow for code formatting and linting

--- a/3. Capitulo 3.md
+++ b/3. Capitulo 3.md
@@ -247,7 +247,7 @@ steps:
 
 ```yaml
 - name: Formatação com Black
-  run: black app
+  run: black --color ./app
 ```
 
 ### Explicação
@@ -277,7 +277,7 @@ O **Black** é um formatador automático de código Python.
 
 ```yaml
 - name: Lint com Ruff
-  run: ruff app
+  run: ruff check ./app
 ```
 
 ### Explicação
@@ -288,7 +288,11 @@ O **Black** é um formatador automático de código Python.
 - **run: ruff app:**
   Executa o **Ruff** sobre o diretório `app`, que é onde está o código fonte da aplicação.
 
-  O Ruff é uma ferramenta de **análise de estilo de código** (similar ao Flake8) muito rápida, baseada nas regras do PEP 8 e organização de imports.
+  O Ruff é uma ferramenta de **análise de estilo de código** (similar ao Flake8) muito rápida, baseada nas regras do PEP 8 e organização de imports.  a flag --check analisa o código sem modificar nada.  Apenas mostra os erros e avisos encontrados.
+
+  Outros subcomandos são
+  - `ruff fix` : Corrige automaticamente os problemas.
+  - `ruff format` : Aplica a formatação padrão.
 
   Ele verifica coisas como:
   - Nomeação de variáveis
@@ -353,7 +357,7 @@ Cada arquivo do diretório `app` será analisado, gerando uma pontuação basead
 
 ```yaml
 - name: Verificação de tipagem com mypy
-  run: mypy app
+  run: mypy ./app
 ```
 
 ### Explicação
@@ -361,7 +365,7 @@ Cada arquivo do diretório `app` será analisado, gerando uma pontuação basead
 - **name: Verificação de tipagem com mypy:**
   Identificação visual desta etapa no GitHub Actions.
 
-- **run: mypy app:**
+- **run: mypy ./app:**
   Executa o **mypy** no diretório `app`.
 
 O **mypy** é uma ferramenta de **verificação de tipos estáticos** para Python.
@@ -391,7 +395,7 @@ Exemplos de problemas que o mypy detecta:
 
 ```yaml
 - name: Análise de segurança com Bandit
-  run: bandit -r app
+  run: bandit -r ./app
 ```
 
 ### Explicação
@@ -468,6 +472,7 @@ Ele consulta bancos de dados públicos de vulnerabilidades (como a base de dados
 ```yaml
 - name: Executar testes unitários
   run: pytest -q
+    PYTHONPATH: ./
 ```
 
 ### Explicação
