docs: add ZAP_TOKEN secret configuration and update OWASP ZAP action version

--- a/2. Capitulo 2.md
+++ b/2. Capitulo 2.md
@@ -41,8 +41,10 @@ Vamos começar configurando os `secrets` necessários no GitHub.
 | `VM_IP` | IP público da sua VM | Ex: `123.456.789.00` |
 | `VM_USER` | Nome do usuário da VM | Ex: `azureuser` |
 | `VM_KEY` | Chave privada SSH | Conteúdo da `.pem` |
+| `ZAP_TOKEN` | Token pessoal GitHub (PAT) | para OWASP ZAP criar issues e artefatos|
 
-*### 3. *Como preparar o valor do `VM_KEY` corretamente*
+
+### 3. *Como preparar o valor do `VM_KEY` corretamente*
 
 - Abra a chave `.pem` com um editor de texto (ex: VSCode).
 - Copie todo o conteúdo, incluindo:
@@ -58,3 +60,15 @@ Vamos começar configurando os `secrets` necessários no GitHub.
 - Não colocar aspas.
 - Manter exatamente todas as linhas da chave.
 
+### 4. Como criar o `ZAP_TOKEN` (Personal Access Token - PAT)
+
+1. Acesse [https://github.com/settings/tokens](https://github.com/settings/tokens)
+2. Clique em **"Generate new token (classic)"**
+3. Dê um nome como `ZAP_TOKEN` e marque apenas a opção:
+   - `public_repo` (caso seu repositório seja público)
+4. Clique em **Generate token**
+5. Copie o token gerado e adicione como secret no GitHub:
+   - Vá em **Settings** > **Secrets and variables** > **Actions**
+   - Clique em **New repository secret**
+   - Nome: `ZAP_TOKEN`
+   - Valor: (cole o token gerado)
