--- a/4. Capitulo 4.md
+++ b/4. Capitulo 4.md
@@ -20,28 +20,30 @@ A seguir, vamos detalhar o restante do arquivo `ci-cd.yml` responsável pelo dep
 
 ```yaml
 deploy:
-  needs: build-test
-  runs-on: ubuntu-latest
-  if: github.ref == 'refs/heads/main'
+    needs: build-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
 
-  steps:
-    - name: Deploy via SSH na VM
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.VM_IP }}
-        username: ${{ secrets.VM_USER }}
-        key: ${{ secrets.VM_KEY }}
-        script: |
-          cd ~/CI-CD-tutorial-completo
-          git pull origin main
-          docker compose down
-          docker compose up -d
-
-    - name: Security Scan com OWASP ZAP
-      uses: zaproxy/action-baseline@v0.10.0
-      with:
-        target: 'http://${{ secrets.VM_IP }}:8000'
-        fail_action: false
+    steps:
+      - name: Deploy via SSH na VM
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.VM_IP }}
+          username: ${{ secrets.VM_USER }}
+          key: ${{ secrets.VM_KEY }}
+          script: |
+            cd ~/CI-CD-tutorial-completo
+            git pull origin main
+            docker compose down
+            docker compose up -d
+      
+      - name: Security Scan com OWASP ZAP
+        uses: zaproxy/action-baseline@v0.14.0
+        with:
+          target: 'http://${{ secrets.VM_IP }}:8000'
+          fail_action: false
+          token: ${{ secrets.ZAP_TOKEN }}
+          artifact_name: zapscanreport
 ```
 
 ---
@@ -57,7 +59,7 @@ deploy:
   if: github.ref == 'refs/heads/main'
 ```
 
-- `deploy:` Define o início do job de deploy.
+- `deploy:` Define o início do job deploy.
 - `needs: build-test`: Este job só será executado **depois que o job `build-test` terminar com sucesso**.
 - `runs-on: ubuntu-latest`: A execução acontece em um runner GitHub Ubuntu atualizado.
 - `if: github.ref == 'refs/heads/main'`: Garante que o deploy só ocorre se o push for na branch `main`.
@@ -97,19 +99,25 @@ deploy:
 ## Bloco 3 - Etapa: Security Scan com OWASP ZAP
 
 ```yaml
-- name: Security Scan com OWASP ZAP
-  uses: zaproxy/action-baseline@v0.10.0
-  with:
-    target: 'http://${{ secrets.VM_IP }}:8000'
-    fail_action: false
+name: Security Scan com OWASP ZAP
+        uses: zaproxy/action-baseline@v0.14.0
+        with:
+          target: 'http://${{ secrets.VM_IP }}:8000'
+          fail_action: false
+          token: ${{ secrets.ZAP_TOKEN }}
+          artifact_name: zapscanreport
 ```
 
 - `- name: Security Scan com OWASP ZAP`: Nome da etapa.
-- `uses: zaproxy/action-baseline@v0.10.0`: Usa a action oficial do ZAP para escanear vulnerabilidades.
+- `uses: zaproxy/action-baseline@v0.14.0`: Usa a action oficial do ZAP para escanear vulnerabilidades.
 - `with:`: Bloco de configurações:
   - `target`: Define a URL da aplicação exposta para varredura.
   - `fail_action: false`: Mesmo que vulnerabilidades sejam detectadas, o workflow continuará e não será interrompido.  Vamos usar essa configuração durante o desenvolvimento apenas.  Após, em nossa produção simulada
   vamos trocar para `true`.
+  - `token`: Token pessoal (PAT) salvo como secret no GitHub. Necessário para o ZAP criar issues ou artefatos com os resultados da varredura.
+- `artifact_name`: Nome do artefato gerado com o relatório do ZAP. Deve seguir o padrão sem espaços ou caracteres especiais.
+
+  - 
 
 ---
 
